Fix card overflow issue

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -30,6 +30,7 @@
 /* card */
 
 .cardRoot {
+  position: fixed;
   text-align: center;
   display: flex;
   justify-content: center;
